--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-swatches": "^2.1.1",
     "vuejs-avataaars": "^4.0.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
