--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.3.3",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
+    "vue-initials-img": "^1.0.4",
     "vue-router": "^3.2.0",
     "vue-swatches": "^2.1.1",
     "vuejs-avataaars": "^4.0.1",
