--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "firebase": "^8.3.3",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
-    "vue-initials-img": "^1.0.4",
     "vue-router": "^3.2.0",
     "vue-swatches": "^2.1.1",
     "vuejs-avataaars": "^4.0.1",
@@ -36,6 +35,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
+    "vue-avatar-component": "^1.3.1",
     "vue-cli-plugin-vuetify": "~2.3.1",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
