--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.21.1",
     "firebase": "^8.3.3",
     "vee-validate": "^3.4.5",
